--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Pull Request
 on:
   push:
     branches: [ development ]
@@ -6,21 +6,15 @@ on:
     branches: [ development ]
   workflow_dispatch:
 jobs:
-  build:
+  pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Perform Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup
+        uses: ./.github/workflows/base
+      - name: Build
+        uses: ./.github/workflows/build
         with:
-          node-version: '18'
-      - name: Npm install
-        run: npm ci
-      - name: Unit tests
-        run: npm run test:coverage
-      # Send coverage report to Coveralls
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
