fixed plugin/locale missing type defs

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:coverage": "vitest run --coverage",
     "serve": "node ./build/serve.js",
     "clean": "node ./build/utilities.js --clean ./dist && node ./build/utilities.js --clean ./types",
-    "build": "npm run clean && node ./build/utilities.js --copy && npm run rollup && npm run build:plugins-and-locales",
+    "build": "npm run clean && node ./build/utilities.js --copy && npm run rollup && npm run build:declarations && npm run build:plugins-and-locales",
     "build:plugins": "node ./build/plugins.js -p",
     "build:locales": "node ./build/plugins.js -l",
     "build:plugins-and-locales": "node ./build/plugins.js",
@@ -34,7 +34,7 @@
     "rollup-watch": "rollup -c ./build/rollup.config.js -w",
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
-    "release": "npm run eslint && npm run test:silent && npm run build && npm run build:declarations",
+    "release": "npm run eslint && npm run test:silent && npm run build",
     "release:version": "npm run release && node build/change-version.js",
     "prepare": "husky install",
     "prettier": "prettier --ignore-unknown --write .",
