--- a/package.json
+++ b/package.json
@@ -106,5 +106,10 @@
     "type": "git",
     "url": "https://github.com/Eonasdan/tempus-dominus.git"
   },
+  "wallaby": {
+    "filesWithNoCoverageCalculated": [
+      "test/fixtures/**/*"
+    ]
+  },
   "funding": "https://ko-fi.com/eonasdan"
 }
