--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,4 +17,4 @@ jobs:
         uses: ./.github/workflows/build
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
