--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,8 @@
 sonar.organization=eonasdan
 sonar.projectKey=Eonasdan_tempus-dominus
+
+sonar.projectName=tempus-dominus
+sonar.projectVersion=6.7.7
+
 sonar.sources = src/
 sonar.tests = test/
