--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -21,6 +21,8 @@ body:
       description: Provide a summary of the issue and what you expected to happen, including specific steps to reproduce.
     validations:
       required: true
+  -type: markdown
+    value: "![Please provide the link in the address bar](/.github/ISSUE_TEMPLATE/image.png)"
   - type: textarea
     id: reduced-test-case
     attributes:
