--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,7 +22,8 @@ body:
     validations:
       required: true
   - type: markdown
-    value: "![Please provide the link in the address bar](/.github/ISSUE_TEMPLATE/image.png)"
+    attributes:
+      value: "![Please provide the link in the address bar](/.github/ISSUE_TEMPLATE/image.png)"
   - type: textarea
     id: reduced-test-case
     attributes:
