--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -23,7 +23,7 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: "![Please provide the link in the address bar](image.png)"
+      value: "![Please provide the link in the address bar](https://raw.githubusercontent.com/Eonasdan/tempus-dominus/master/.github/ISSUE_TEMPLATE/image.png)"
   - type: textarea
     id: reduced-test-case
     attributes:
