--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup
         uses: ./.github/workflows/base
-      - name: Release
+      - name: Build
         uses: ./.github/workflows/build
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
