--- a/.github/workflows/docs/action.yaml
+++ b/.github/workflows/docs/action.yaml
@@ -11,6 +11,6 @@ runs:
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ inputs.GITHUB_TOKEN }}
           publish_dir: ./docs
           keep_files: true
